--- a/portafolio.html
+++ b/portafolio.html
@@ -25,7 +25,7 @@
 </div>
 </div>
 <div id="featured_work_container">
-  <h3> Featured work </h3>
+  <h3> Lee este texto </h3>
 <div class="project_container"></div>
 <div class="project_container"></div>
 <div class="project_container"></div>
